--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,14 +2,14 @@
 
 <div class="bg-light py-3">
     <div class="container">
-        <div class="row justify-content-between">
+        <div class="row justify-content-between align-items-center">
             <div class="col-8 col-lg-4">
-                <a class="" href="#">
+                <a class="" href="https://www.bancodeoccidente.com.co/">
                     <img src="assets/recursos/occidente.png" width="60%" class="" alt="">
                 </a>
             </div>
-            <div class="col-4 col-lg-4">
-                
+            <div class="col-4 col-lg-4 d-flex align-items-center justify-content-center">
+                <p class="userName m-0 p-0">Nombre usuario</p>
             </div>
         </div>
     </div>
